crates/ditto-checker/tests/golden/type-errors/duplicate_function_binder.ditto
module Test exports (..)

too_many_ys = fn (x, y, y, z) -> z
